[project]
name = "comfyui-menu-anchor"
description = "Automatically snaps the menu to corner"
version = "1.0.0"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-menu-anchor"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Menu Anchor"
Icon = ""
