[project]
name = "comfyui-menu-anchor"
description = "Snaps the menu to the corner automatically"
version = "1.2.0"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-menu-anchor"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Menu Anchor"
Icon = ""
